- refactored BackgroundCells component into RFC; - bumped deps and fixed breaking changes;

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mercuriya/react-big-calendar",
-  "version": "0.23.0",
+  "version": "0.24.1",
   "description": "Calendar! with events",
   "author": {
     "name": "Jason Quense",
@@ -69,15 +69,18 @@
     "bracketSpacing": true
   },
   "peerDependencies": {
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@4c/rollout": "^1.4.0",
+    "@4c/rollout": "2.1.0",
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.5",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/react": "^5.0.11",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.3.0",
+    "@storybook/addon-actions": "5.2.8",
+    "@storybook/react": "5.2.8",
     "autoprefixer": "^9.5.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -85,16 +88,16 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.22",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "babel-preset-jason": "^6.0.1",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "4.4.1",
     "bootstrap-sass": "^3.4.1",
     "component-metadata-loader": "^4.0.0",
     "cpy-cli": "^2.0.0",
-    "eslint": "5.15.3",
-    "eslint-config-jason": "5.0.0",
-    "eslint-config-prettier": "4.1.0",
-    "eslint-import-resolver-webpack": "0.11.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-react": "7.12.4",
+    "eslint": "6.8.0",
+    "eslint-config-jason": "6.1.0",
+    "eslint-config-prettier": "6.9.0",
+    "eslint-import-resolver-webpack": "0.12.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-react": "7.17.0",
     "font-awesome": "^4.7.0",
     "globalize": "^0.1.1",
     "husky": "^0.14.3",
@@ -104,25 +107,22 @@
     "marked": "^0.5.1",
     "moment": "^2.22.2",
     "mt-changelog": "^0.6.1",
-    "node-sass": "4.12.0",
+    "node-sass": "4.13.0",
     "postcss": "^7.0.16",
     "postcss-cli": "^6.1.2",
     "prettier": "^1.15.1",
-    "react": "^16.6.1",
-    "react-bootstrap": "^0.32.4",
+    "react": "16.12.0",
+    "react-bootstrap": "1.0.0-beta.16",
     "react-docgen": "^3.0.0-rc.1",
-    "react-dom": "^16.6.1",
+    "react-dom": "16.12.0",
     "react-tackle-box": "^2.1.0",
-    "rimraf": "^2.4.2",
-    "rollup": "^1.1.0",
+    "rimraf": "3.0.0",
+    "rollup": "^1.27.14",
     "rollup-plugin-babel": "^4.3.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-size-snapshot": "^0.8.0",
-    "rollup-plugin-terser": "^4.0.2",
+    "rollup-plugin-size-snapshot": "0.10.0",
+    "rollup-plugin-terser": "5.1.3",
     "webpack": "^4.25.1",
-    "webpack-atoms": "^8.0.0",
+    "webpack-atoms": "12.0.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
@@ -134,7 +134,7 @@
     "invariant": "^2.2.4",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
-    "memoize-one": "^4.0.3",
+    "memoize-one": "^5.1.1",
     "prop-types": "^15.6.2",
     "react-overlays": "^2.0.0-0",
     "uncontrollable": "^7.0.0"
