--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mercuriya/react-big-calendar",
-  "version": "0.24.3",
+  "version": "0.24.4",
   "description": "Calendar! with events",
   "author": {
     "name": "Jason Quense",
@@ -74,40 +74,40 @@
   },
   "devDependencies": {
     "@4c/rollout": "2.1.0",
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.5",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@babel/cli": "7.8.3",
+    "@babel/core": "7.8.3",
+    "@rollup/plugin-commonjs": "11.0.1",
+    "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "@storybook/addon-actions": "5.2.8",
-    "@storybook/react": "5.2.8",
-    "autoprefixer": "^9.5.1",
+    "@storybook/addon-actions": "5.3.9",
+    "@storybook/react": "5.3.9",
+    "autoprefixer": "9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "25.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.22",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "babel-preset-jason": "^6.0.1",
     "bootstrap": "4.4.1",
     "bootstrap-sass": "^3.4.1",
     "component-metadata-loader": "^4.0.0",
-    "cpy-cli": "^2.0.0",
+    "cpy-cli": "3.0.0",
     "eslint": "6.8.0",
     "eslint-config-jason": "6.1.0",
     "eslint-config-prettier": "6.9.0",
-    "eslint-import-resolver-webpack": "0.12.0",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-react": "7.17.0",
+    "eslint-import-resolver-webpack": "0.12.1",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-react": "7.18.0",
     "font-awesome": "^4.7.0",
     "globalize": "^0.1.1",
-    "husky": "^0.14.3",
+    "husky": "4.2.1",
     "jest": "^23.6.0",
     "lint-staged": "^8.0.4",
     "markdown-jsx-loader": "^3.0.2",
     "marked": "^0.5.1",
     "moment": "^2.22.2",
     "mt-changelog": "^0.6.1",
-    "node-sass": "4.13.0",
+    "node-sass": "4.13.1",
     "postcss": "^7.0.16",
     "postcss-cli": "^6.1.2",
     "prettier": "^1.15.1",
@@ -117,10 +117,10 @@
     "react-dom": "16.12.0",
     "react-tackle-box": "^2.1.0",
     "rimraf": "3.0.0",
-    "rollup": "^1.27.14",
+    "rollup": "1.29.1",
     "rollup-plugin-babel": "^4.3.0",
     "rollup-plugin-size-snapshot": "0.10.0",
-    "rollup-plugin-terser": "5.1.3",
+    "rollup-plugin-terser": "5.2.0",
     "webpack": "^4.25.1",
     "webpack-atoms": "12.0.2",
     "webpack-cli": "^3.1.2",
