--- a/package.json
+++ b/package.json
@@ -73,51 +73,45 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@4c/rollout": "2.1.0",
-    "@babel/cli": "7.8.3",
-    "@babel/core": "7.8.3",
+    "@4c/rollout": "2.1.10",
+    "@babel/cli": "7.10.5",
+    "@babel/core": "7.10.5",
     "@rollup/plugin-commonjs": "11.0.1",
     "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "@storybook/addon-actions": "5.3.9",
-    "@storybook/react": "5.3.9",
-    "autoprefixer": "9.7.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "25.1.0",
+    "@storybook/addon-actions": "5.3.19",
+    "@storybook/react": "5.3.19",
+    "autoprefixer": "9.8.5",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.22",
     "babel-plugin-transform-rename-import": "^2.3.0",
     "babel-preset-jason": "^6.0.1",
-    "bootstrap": "4.4.1",
+    "bootstrap": "4.5.0",
     "bootstrap-sass": "^3.4.1",
     "component-metadata-loader": "^4.0.0",
-    "cpy-cli": "3.0.0",
-    "eslint": "6.8.0",
-    "eslint-config-jason": "6.1.0",
-    "eslint-config-prettier": "6.9.0",
-    "eslint-import-resolver-webpack": "0.12.1",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-react": "7.18.0",
+    "eslint": "7.5.0",
+    "eslint-config-jason": "7.0.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-import-resolver-webpack": "0.12.2",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-react": "7.20.3",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "font-awesome": "^4.7.0",
-    "globalize": "^0.1.1",
-    "husky": "4.2.1",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.0.4",
+    "husky": "4.2.5",
+    "jest": "26.1.0",
+    "lint-staged": "10.2.11",
     "markdown-jsx-loader": "^3.0.2",
-    "marked": "^0.5.1",
     "moment": "^2.22.2",
     "mt-changelog": "^0.6.1",
-    "node-sass": "4.13.1",
+    "node-sass": "4.14.1",
     "postcss": "^7.0.16",
-    "postcss-cli": "^6.1.2",
-    "prettier": "^1.15.1",
+    "postcss-cli": "7.1.1",
+    "prettier": "2.0.5",
     "react": "^16.13.1",
-    "react-bootstrap": "1.0.0-beta.16",
-    "react-docgen": "^3.0.0-rc.1",
+    "react-bootstrap": "1.3.0",
     "react-dom": "^16.13.1",
     "react-tackle-box": "^2.1.0",
-    "rimraf": "3.0.0",
+    "rimraf": "3.0.2",
     "rollup": "1.29.1",
     "rollup-plugin-babel": "^4.3.0",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -125,14 +119,14 @@
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-size-snapshot": "0.10.0",
     "rollup-plugin-terser": "5.2.0",
-    "webpack": "^4.25.1",
-    "webpack-atoms": "12.0.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "4.44.0",
+    "webpack-atoms": "13.1.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
-    "clsx": "^1.0.4",
+    "@babel/runtime": "7.10.5",
+    "clsx": "1.1.1",
     "date-arithmetic": "^4.0.1",
     "dom-helpers": "^5.1.0",
     "invariant": "^2.2.4",
@@ -140,11 +134,8 @@
     "lodash-es": "^4.17.11",
     "memoize-one": "^5.1.1",
     "prop-types": "^15.7.2",
-    "react-overlays": "^2.0.0-0",
+    "react-overlays": "4.1.0",
     "uncontrollable": "^7.0.0"
-  },
-  "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
   },
   "bugs": {
     "url": "https://github.com/jquense/react-big-calendar/issues"
