--- a/package.json
+++ b/package.json
@@ -74,13 +74,14 @@
   },
   "devDependencies": {
     "@4c/rollout": "2.1.10",
-    "@babel/cli": "7.10.5",
-    "@babel/core": "7.10.5",
+    "@babel/cli": "7.12.1",
+    "@babel/core": "7.12.3",
     "@rollup/plugin-commonjs": "11.0.1",
     "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "^2.3.0",
-    "@storybook/addon-actions": "5.3.19",
-    "@storybook/react": "5.3.19",
+    "@storybook/addon-actions": "6.0.27",
+    "@storybook/addon-controls": "^6.0.27",
+    "@storybook/react": "6.0.27",
     "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.1.0",
@@ -91,13 +92,13 @@
     "bootstrap-sass": "^3.4.1",
     "component-metadata-loader": "^4.0.0",
     "cpy-cli": "^3.1.1",
-    "eslint": "7.5.0",
+    "eslint": "7.12.0",
     "eslint-config-jason": "7.0.1",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-import-resolver-webpack": "0.12.2",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-config-prettier": "6.14.0",
+    "eslint-import-resolver-webpack": "0.13.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "font-awesome": "^4.7.0",
     "globalize": "^0.1.1",
     "husky": "4.2.5",
@@ -109,7 +110,7 @@
     "node-sass": "4.14.1",
     "postcss": "^7.0.16",
     "postcss-cli": "7.1.1",
-    "prettier": "2.0.5",
+    "prettier": "2.1.2",
     "react": "^16.13.1",
     "react-bootstrap": "1.3.0",
     "react-dom": "^16.13.1",
@@ -128,7 +129,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@babel/runtime": "7.10.5",
+    "@babel/runtime": "7.12.1",
     "clsx": "1.1.1",
     "date-arithmetic": "^4.0.1",
     "dom-helpers": "^5.1.0",
