refactor(dnd): transform HOC to hook and move Context to modern API refactor(dnd): add typings to part of code refactor(core): Calendar wrapped by CalendarContext.Provider refactor(core): export CalendarContext

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,11 +14,10 @@
     "url": "https://github.com/newsiberian/react-big-calendar/issues"
   },
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "module": "dist/react-big-calendar.esm.js",
-  "style": "lib/css/react-big-calendar.css",
+  "style": "dist/css/react-big-calendar.css",
   "files": [
-    "lib/",
     "dist/",
     "LICENSE",
     "README.md"
