--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -1,13 +1,21 @@
 {
   "name": "@react-next-calendar/dnd",
   "version": "0.1.0",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "style": "dist/styles.css",
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
   "private": false,
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "sass": "node-sass styles.scss dist/css/styles.css",
+    "sass": "node-sass styles.scss dist/styles.css",
     "build:tsc": "tsc"
   },
   "peerDependencies": {
