--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,8 +62,9 @@
     "react-dom": "^16.12.0"
   },
   "dependencies": {
+    "@react-next-calendar/hooks": "^0.1.0",
+    "@react-next-calendar/utils": "^0.1.0",
     "clsx": "1.1.1",
-    "date-arithmetic": "^4.0.1",
     "dom-helpers": "^5.1.0",
     "invariant": "^2.2.4",
     "lodash": "^4.17.11",
