--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -13,12 +13,18 @@
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "scripts": {
     "clean": "rimraf dist",
     "sass": "node-sass styles.scss dist/styles.css",
-    "build:tsc": "tsc"
+    "build:tsc": "tsc",
+    "build": "yarn build:tsc && yarn sass"
   },
   "peerDependencies": {
     "@react-next-calendar/core": "*"
+  },
+  "dependencies": {
+    "@react-next-calendar/hooks": "^0.1.0",
+    "@react-next-calendar/utils": "^0.1.0"
   }
 }
