--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,7 +8,7 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "../../types/typings.d.ts"
+    "../../types/index.d.ts"
   ],
   "exclude": ["src/**/__tests__/*.ts", "node_modules", "dist"]
 }
