--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,6 +19,9 @@
     "build": "yarn build:tsc"
   },
   "dependencies": {
-    "date-arithmetic": "^4.0.1"
+    "date-arithmetic": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/date-arithmetic": "^4.1.0"
   }
 }
