BREAKING CHANGE: rename @react-next-calendar/core output styles to `styles.css`
chore: move versions of all packages to 1.0.0 since there is too many changes
chore(core): remove unused oldGlobalize Localizer
chore(core): remove less styles
chore: improve typings
chore(storybook): add two localizer stories
chore: restore the ability to run tests

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
-    "downlevelIteration": true
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts",
