--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "storybook": "start-storybook -p 9001",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
-    "test": "jest -c test/jest.config.json"
+    "test": "jest -c test/jest.config.js"
   },
   "lint-staged": {
     "src/**/*.js": "eslint",
@@ -28,16 +28,16 @@
     "@rollup/plugin-commonjs": "16.0.0",
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-replace": "2.3.4",
-    "@storybook/addon-actions": "6.1.7",
-    "@storybook/addon-controls": "6.1.7",
-    "@storybook/addon-docs": "6.1.7",
-    "@storybook/react": "6.1.7",
+    "@storybook/addon-actions": "6.1.8",
+    "@storybook/addon-controls": "6.1.8",
+    "@storybook/addon-docs": "6.1.8",
+    "@storybook/react": "6.1.8",
     "@types/jest": "26.0.15",
     "@types/lodash": "4.14.165",
     "@types/react": "16.9.56",
     "@typescript-eslint/eslint-plugin": "4.8.2",
     "@typescript-eslint/parser": "4.8.2",
-    "autoprefixer": "10.0.2",
+    "autoprefixer": "10.0.4",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-rename-import": "2.3.0",
@@ -57,7 +57,7 @@
     "node-sass": "5.0.0",
     "postcss": "8.1.10",
     "postcss-cli": "8.3.0",
-    "prettier": "2.2.0",
+    "prettier": "2.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "rimraf": "3.0.2",
@@ -67,6 +67,7 @@
     "rollup-plugin-typescript2": "0.29.0",
     "sass-loader": "10.1.0",
     "ts-jest": "26.4.4",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "4.1.2"
   }
 }
