--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@react-next-calendar/dnd",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "style": "dist/styles.css",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/",
     "LICENSE",
@@ -20,11 +21,9 @@
     "build:tsc": "tsc",
     "build": "yarn build:tsc && yarn sass"
   },
-  "peerDependencies": {
-    "@react-next-calendar/core": "*"
-  },
   "dependencies": {
-    "@react-next-calendar/hooks": "^0.1.0",
-    "@react-next-calendar/utils": "^0.1.0"
+    "@react-next-calendar/core": "^1.0.0",
+    "@react-next-calendar/hooks": "^1.0.0",
+    "@react-next-calendar/utils": "^1.0.0"
   }
 }
