--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@react-next-calendar/hooks",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/",
     "LICENSE",
