--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@react-next-calendar/utils",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/",
     "LICENSE",
@@ -22,6 +23,6 @@
     "date-arithmetic": "^4.1.0"
   },
   "devDependencies": {
-    "@types/date-arithmetic": "^4.1.0"
+    "@types/date-arithmetic": "4.1.1"
   }
 }
