chore: build shouldn't use `paths` option. This is only for local usage chore: remove Semantic Release from release.yml. We will use `conventional-changelog`

--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,11 @@
     "publish": {
       "ignoreChanges": ["ignored-file", "*.md"],
       "message": "chore(release): publish"
+    },
+    "version": {
+      "allowBranch": "main",
+      "ignoreChanges": ["test/**", "**/__tests__/**", "stories/**", "**/*.md"],
+      "message": "chore(release): publish %s"
     }
   },
   "version": "1.0.0"
