--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '14.x'
 
       - name: Install Dependencies
         run: yarn install
@@ -27,14 +27,14 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@master
-        id: semantic
-        with:
-          branch: master
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/changelog
+#      - name: Semantic Release
+#        uses: cycjimmy/semantic-release-action@master
+#        id: semantic
+#        with:
+#          branch: main
+#          extra_plugins: |
+#            @semantic-release/git
+#            @semantic-release/changelog
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
