--- a/packages/dnd/tsconfig.json
+++ b/packages/dnd/tsconfig.json
@@ -1,9 +1,6 @@
 {
-  "extends": "../../tsconfig",
-  "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist"
-  },
+  "extends": "../../tsconfig.json",
+
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
