--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,10 @@
 {
+  "extends": "./tsconfig.build.json",
+
   "compilerOptions": {
-    "target": "ES2017",
-    "module": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
-    "jsx": "react",
-    "declaration": true,
-    "sourceMap": true,
-    "importHelpers": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
       "@react-next-calendar/*": ["packages/*/src"]
-    },
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    }
   }
 }
