--- a/packages/dnd/package.json
+++ b/packages/dnd/package.json
@@ -2,9 +2,10 @@
   "name": "@react-next-calendar/dnd",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "style": "dist/styles.css",
-  "types": "dist/index.d.ts",
+  "types": "dist/esm/index.d.ts",
   "files": [
     "dist/",
     "LICENSE",
@@ -20,8 +21,11 @@
     "sass": "node-sass styles.scss dist/styles.css",
     "autoprefixer": "postcss --use autoprefixer < ./dist/styles.css",
     "build:css": "npm run sass && npm run autoprefixer",
-    "build:tsc": "tsc -p tsconfig.build.json",
-    "build": "yarn build:tsc && yarn sass && yarn build:css"
+    "build:cjs": "tsc -p tsconfig.build.json",
+    "build:es": "tsc -p tsconfig.build.json -m esnext --outDir dist/esm",
+    "build": "yarn build:cjs && yarn build:es && yarn build:css",
+    "prepublishOnly": "yarn build",
+    "precommit": "lint-staged"
   },
   "browserslist": [
     "defaults"
