--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,8 +2,9 @@
   "name": "@react-next-calendar/utils",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "files": [
     "dist/",
     "LICENSE",
@@ -16,8 +17,9 @@
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf dist",
-    "build:tsc": "tsc",
-    "build": "yarn build:tsc"
+    "build:cjs": "tsc",
+    "build:es": "tsc -m esnext --outDir dist/esm",
+    "build": "yarn build:cjs && yarn build:es"
   },
   "dependencies": {
     "date-arithmetic": "^4.1.0"
