--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": [
       "dom",
       "esnext"
