--- a/package.json
+++ b/package.json
@@ -24,41 +24,40 @@
     ]
   },
   "devDependencies": {
+    "@microsoft/tsdoc": "0.12.24",
     "@rollup/plugin-babel": "5.2.1",
     "@rollup/plugin-commonjs": "16.0.0",
     "@rollup/plugin-node-resolve": "10.0.0",
     "@rollup/plugin-replace": "2.3.4",
-    "@storybook/addon-actions": "6.1.9",
-    "@storybook/addon-controls": "6.1.9",
-    "@storybook/addon-docs": "6.1.9",
-    "@storybook/react": "6.1.9",
+    "@storybook/addon-essentials": "6.1.10",
+    "@storybook/react": "6.1.10",
     "@types/jest": "26.0.15",
     "@types/lodash": "4.14.165",
     "@types/react": "16.9.56",
-    "@typescript-eslint/eslint-plugin": "4.8.2",
-    "@typescript-eslint/parser": "4.8.2",
+    "@typescript-eslint/eslint-plugin": "4.9.0",
+    "@typescript-eslint/parser": "4.9.0",
     "autoprefixer": "10.0.4",
     "babel-eslint": "10.1.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "babel-plugin-transform-rename-import": "2.3.0",
     "date-fns": "2.16.1",
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-tsdoc": "0.2.10",
     "jest": "26.6.3",
     "lerna": "3.22.1",
-    "lint-staged": "10.5.2",
+    "lint-staged": "10.5.3",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
-    "postcss": "8.1.10",
+    "postcss": "8.1.14",
     "postcss-cli": "8.3.0",
     "prettier": "2.2.1",
     "react": "16.13.1",
+    "react-docgen-typescript-loader": "3.7.2",
     "react-dom": "16.13.1",
     "rimraf": "3.0.2",
     "rollup": "2.33.3",
