--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "module": "commonjs",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
