--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-replace": "2.3.4",
     "@storybook/addon-essentials": "6.1.10",
     "@storybook/react": "6.1.10",
+    "@storybook/storybook-deployer": "2.8.7",
     "@types/jest": "26.0.15",
     "@types/lodash": "4.14.165",
     "@types/react": "16.9.56",
