--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -22,8 +22,8 @@
     "build": "yarn build:cjs && yarn build:es"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1 || ^17.0.2",
+    "react-dom": "^16.13.1 || ^17.0.2"
   },
   "dependencies": {
     "dom-helpers": "^5.1.0"
