--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "test": "jest -c test/jest.config.js"
   },
   "lint-staged": {
-    "src/**/*.js": "eslint",
-    "test/**/*.js": "eslint",
+    "packages/**/*.{js,jsx,ts,tsx}": "eslint",
+    "stories/**/*.{js,jsx,ts,tsx}": "eslint",
+    "test/**/*.{js,jsx,ts,tsx}": "eslint",
     "*.{js,json,css,md}": [
       "prettier --write",
       "git add"
     ]
   },
   "devDependencies": {
-    "@microsoft/tsdoc": "0.12.24",
+    "@microsoft/tsdoc": "0.14.2",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-node-resolve": "13.0.4",
@@ -35,31 +36,31 @@
     "@storybook/manager-webpack5": "6.5.15",
     "@storybook/react": "6.5.15",
     "@storybook/storybook-deployer": "2.8.16",
-    "@types/jest": "26.0.15",
+    "@types/jest": "29.2.5",
     "@types/react": "16.9.56",
-    "@typescript-eslint/eslint-plugin": "4.9.0",
-    "@typescript-eslint/parser": "4.9.0",
-    "autoprefixer": "10.0.4",
+    "@typescript-eslint/eslint-plugin": "5.48.0",
+    "@typescript-eslint/parser": "5.48.0",
+    "autoprefixer": "10.4.13",
     "babel-eslint": "10.1.0",
     "date-fns": "2.16.1",
-    "eslint": "7.14.0",
-    "eslint-config-prettier": "6.15.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.3",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.2.0",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint": "8.31.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.2.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.8",
-    "eslint-plugin-tsdoc": "0.2.10",
-    "jest": "26.6.3",
+    "eslint-plugin-tsdoc": "0.2.17",
+    "jest": "29.3.1",
     "lerna": "4.0.0",
     "lint-staged": "10.5.3",
     "moment": "2.29.4",
     "node-sass": "8.0.0",
     "postcss": "8.4.20",
     "postcss-cli": "10.1.0",
-    "prettier": "2.2.1",
+    "prettier": "2.8.1",
     "react": "16.13.1",
     "react-docgen-typescript-loader": "3.7.2",
     "react-dom": "16.13.1",
@@ -68,8 +69,8 @@
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
     "sass-loader": "13.2.0",
-    "ts-jest": "26.4.4",
+    "ts-jest": "29.0.3",
     "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.1.2"
+    "typescript": "4.9.4"
   }
 }
