chore(storybook): migrate to Storybook@7

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "sass": "node-sass src/sass/styles.scss ./dist/styles.css",
+    "sass": "sass src/sass/styles.scss ./dist/styles.css",
     "autoprefixer": "postcss --use autoprefixer < ./dist/styles.css",
     "build:css": "npm run sass && npm run autoprefixer",
     "build:cjs": "tsc -p tsconfig.build.json",
