--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "bootstrap": "lerna bootstrap",
     "build": "yarn run clean && lerna run build",
     "clean": "lerna run clean",
-    "storybook": "start-storybook -p 9001 --ci",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 9001 --ci",
+    "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages",
     "test": "jest -c test/jest.config.js"
   },
@@ -24,17 +24,22 @@
       "git add"
     ]
   },
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  },
   "devDependencies": {
+    "@babel/preset-env": "7.23.7",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
     "@microsoft/tsdoc": "0.14.2",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "@rollup/plugin-replace": "3.0.0",
-    "@storybook/addon-essentials": "6.5.15",
-    "@storybook/addon-postcss": "2.0.0",
-    "@storybook/builder-webpack5": "6.5.15",
-    "@storybook/manager-webpack5": "6.5.15",
-    "@storybook/react": "6.5.15",
+    "@storybook/addon-essentials": "7.6.7",
+    "@storybook/addon-styling-webpack": "0.0.6",
+    "@storybook/react": "7.6.7",
+    "@storybook/react-webpack5": "7.6.7",
     "@storybook/storybook-deployer": "2.8.16",
     "@types/jest": "29.2.5",
     "@types/react": "17.0.52",
@@ -51,24 +56,24 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-storybook": "0.6.8",
+    "eslint-plugin-storybook": "0.6.15",
     "eslint-plugin-tsdoc": "0.2.17",
     "jest": "29.3.1",
     "lerna": "6.4.0",
     "lint-staged": "10.5.3",
     "moment": "2.29.4",
-    "node-sass": "9.0.0",
     "postcss": "8.4.32",
     "postcss-cli": "11.0.0",
     "prettier": "2.8.1",
     "react": "17.0.2",
-    "react-docgen-typescript-loader": "3.7.2",
     "react-dom": "17.0.2",
     "rimraf": "3.0.2",
     "rollup": "2.56.3",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.30.0",
+    "sass": "1.69.7",
     "sass-loader": "13.3.3",
+    "storybook": "7.6.7",
     "ts-jest": "29.0.3",
     "tsconfig-paths-webpack-plugin": "4.0.0",
     "typescript": "4.9.4"
