--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "storybook": "storybook dev -p 9001 --ci",
     "build-storybook": "storybook build",
     "deploy-storybook": "storybook-to-ghpages",
+    "validate-types": "tsc --noEmit",
     "test": "jest -c test/jest.config.js"
   },
   "lint-staged": {
